--- a/Programa/index.html
+++ b/Programa/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projecte 1</title>
 </head>
+
 <body>
-    <button id="tabla"> Tabla </button>
+
+    <table id="tablero">
+        <tbody></tbody>
+    </table>
+
+    <input type="text" id="nombre" placeholder="Escribe tu nombre">
+    <button id="guardar">Guardar</button>
+
     <script src="main.js"></script>
 </body>
 </html>
