creando tabla interactiva

--- a/Programa/index.html
+++ b/Programa/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projecte 1</title>
+    <link rel="stylesheet" href="estilo.css">
+
 </head>
 
 <body>
@@ -13,9 +15,14 @@
         <tbody></tbody>
     </table>
 
+<div id=formulario>
+    <h3>Configuracion del Juego
     <input type="text" id="nombre" placeholder="Escribe tu nombre">
+    <input type="number" id="ampliada" placeholder="Numero entre 7 y20">
+    <input type="number" id="altura" placeholder="Numero entre 7 y20">
     <button id="guardar">Guardar</button>
-
+</div>
     <script src="main.js"></script>
 </body>
+
 </html>
