--- a/Programa/index.html
+++ b/Programa/index.html
@@ -15,13 +15,15 @@
         <tbody></tbody>
     </table>
 
-<div id=formulario>
-    <h3>Configuracion del Juego
-    <input type="text" id="nombre" placeholder="Escribe tu nombre">
-    <input type="number" id="ampliada" placeholder="Numero entre 7 y20">
-    <input type="number" id="altura" placeholder="Numero entre 7 y20">
-    <button id="guardar">Guardar</button>
-</div>
+    <div id=formulario>
+        <h3>Configuracion del Juego
+            <input type="text" id="nombre" placeholder="Escribe tu nombre">
+            <input type="number" id="ampliada" placeholder="Numero entre 7 y20">
+            <input type="number" id="altura" placeholder="Numero entre 7 y20">
+            <button id="guardar">Guardar</button>
+            <button id="estadisticas">estadisticas</button>
+
+    </div>
     <script src="main.js"></script>
 </body>
 
