modificado calcular puntos

--- a/Programa/index.html
+++ b/Programa/index.html
@@ -43,7 +43,7 @@
         </div>
 
         <div id="botones">
-            <button id="guardar" class="btn azul">Start Game</button>
+            <button id="guardar" class="btn azul" type="button">Start Game</button>
             <button class="btn blanco">Restart Game</button>
             <button class="btn rojo">Abandon Game</button>
             <button id="ver_estado" class="btn gris">Ver Estado</button>
@@ -58,6 +58,7 @@
     <table id="tablero">
         <tbody></tbody>
     </table>
+
     <script src="main.js"></script>
 </body>
 
