--- a/FastApi/index.html
+++ b/FastApi/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Projecte 1 - Batalla Naval</title>
-  <link rel="stylesheet" href="estilo.css">
+  <link rel="stylesheet" href="/static/estilo.css">
 </head>
 
 <body>
@@ -49,7 +49,7 @@
         <button id="ver_estado" class="btn gris" type="button">Ver Estado</button>
         <button id="estadisticas" class="btn gris" type="button">Ver Estadísticas</button>
       </div>
-      <img src="img/mando.jpg" alt="Imagen mando" class="decoracion-izquierda">
+      <img src="/static/img/mando.jpg" alt="Imagen mando" class="decoracion-izquierda">
     </div>
 
     <div class="container">
@@ -74,7 +74,7 @@
         <h4>Nombre de Jugades</h4>
         <h3 id="jugadas">15</h3>
       </div>
-      <img src="img/mario.png" alt="Decoració" class="decoracion-mario">
+      <img src="/static/img/mario.png" alt="Decoració" class="decoracion-mario">
     </div>
 
     <div class="tablero-contenedor">
@@ -95,6 +95,6 @@
     </div>
   </div>
   <div id="estado_juego"></div>
-  <script src="main.js"></script>
+  <script src="/static/main.js"></script>
 </body>
 </html>
