--- a/FastApi/static/index.html
+++ b/FastApi/static/index.html
@@ -74,7 +74,7 @@
         <h4>Nombre de Jugades</h4>
         <h3 id="jugadas">15</h3>
       </div>
-      <img src="/static/img/mario.png" alt="Decoració" class="decoracion-mario">
+      <img src="static/img/mario.png" alt="Decoració" class="decoracion-mario">
     </div>
 
     <div class="tablero-contenedor">
